# models/User.js
@@ -1,0 +1,53 @@
+const mongoose = require('mongoose');
+const bcrypt = require('bcrypt');
+
+const SALT_ROUNDS = 12;
+
+const userSchema = new mongoose.Schema({
+  username: {
+    type: String,
+    required: true,
+    unique: true,
+    trim: true
+  },
+  password: {
+    type: String,
+    required: true,
+    select: false
+  },
+  coins: {
+    type: Number,
+    default: 50
+  },
+  currentLevel: {
+    type: Number,
+    default: 1
+  },
+  highScore: {
+    type: Number,
+    default: 0
+  },
+  completedQuotes: [
+    {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: 'Quote'
+    }
+  ]
+}, {
+  timestamps: true
+});
+
+userSchema.pre('save', async function (next) {
+  if (!this.isModified('password')) {
+    return next();
+  }
+
+  this.password = await bcrypt.hash(this.password, SALT_ROUNDS);
+  next();
+});
+
+userSchema.methods.matchPassword = async function (enteredPassword) {
+  return bcrypt.compare(enteredPassword, this.password);
+};
+
+module.exports = mongoose.model('User', userSchema);
